--- a/style.css
+++ b/style.css
@@ -6,8 +6,14 @@
 }
 
 section{
-    color: #0B1720;
+    --color-dark: #0B1720;
+    ---color-light: #fff;
+    --color-primary: #00316A;
+    --color-secondary: #6ADFD7;
+    
+    color: var(--color-font);
     font-family: 'Inter', sans-serif;
+    padding: 1rem;
 }
 
 
@@ -16,7 +22,7 @@ section{
     font-size: 2rem;
     font-weight:900;
     letter-spacing: -.024em;
-    margin: 0 0 0 1rem;
+    margin: 0 0 0 16px;
 }
 
 .pricing-table__header-description{
@@ -28,5 +34,95 @@ section{
     margin-bottom: 80px
 }
 
+.pricing-table__card{
+    display:flex;
+    flex-direction: column;
+    box-shadow: 0 2px 24px rgba(110, 123, 129, .2);
+}
 
+.pricing-table__head{
+    text-align:center;
+    padding:66px 32px 40px;
+    border-radius: 30px 30px 0 0;
+    background-color: var(--color-primary);
+    color: var(---color-light);
+    font-weight: 600;
+    position:relative;
+}
 
+.pricing-table__head > * {
+    margin:0;
+}
+
+.pricing-table__card-icon{
+    position: absolute;
+    top: -45px;
+    left: 50%;
+    margin-left: -40px;
+}
+
+.pricing-table__card-title{
+    font-size: 1.17rem;
+    font-weight: 600;
+    text-transform: uppercase;
+    margin:0 0 8px;
+}
+
+.pricing-table__card-subtitle{
+    margin: 0 0 8px;
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 17px;
+    letter-spacing: -.0045em;
+}
+
+.pricing-table__card-price{
+    font-weight: 900;
+    font-size: 32px;
+    line-height: 42px;
+    letter-spacing: -.018em;
+    color: var(--color-secondary);
+}
+
+.pricing-table__card-price > span{
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 17px;
+    letter-spacing: -.018em;
+    color: var(---color-light);
+}
+
+.pricing-table__body{
+    flex-grow: 1;
+    padding: 24px 40px 32px;
+    margin: 0;
+    border-bottom: 1px solid #BDBDBD;
+}
+
+.pricing-table__body-item{
+    margin-bottom: 24px;
+}
+
+.pricing-table__body-title, .pricing-table__body-item-title{
+    font-size: 18px;
+    font-weight: 600;
+    margin-bottom: 16px;
+}
+
+.pricing-table__body-item-title{
+    display: flex;
+    align-items: center;
+}
+
+.pricing-table__body-item-title img{
+    width: 48px;
+    height: 48px;
+    margin-right: 16px;
+}
+
+.pricing-table__body-item-text{
+    font-weight: 400;
+    font-size: 15px;
+    line-height: 24px;
+    letter-spacing: -.003em;
+}
