--- a/style.css
+++ b/style.css
@@ -10,7 +10,6 @@ section{
     ---color-light: #fff;
     --color-primary: #00316A;
     --color-secondary: #6ADFD7;
-    
     color: var(--color-font);
     font-family: 'Inter', sans-serif;
     padding: 1rem;
@@ -38,7 +37,8 @@ section{
     display:flex;
     flex-direction: column;
     box-shadow: 0 2px 24px rgba(110, 123, 129, .2);
-    border-radius: 0 0 20px 20px;
+    border-radius: 30px 30px 20px 20px;
+    margin-bottom: 64px;
 }
 
 .pricing-table__head{
@@ -95,9 +95,12 @@ section{
 
 .pricing-table__body{
     flex-grow: 1;
-    padding: 24px 40px 32px;
     margin: 0;
     border-bottom: 1px solid #BDBDBD;
+}
+
+.pricing-table__body-content{
+    padding: 24px 40px 32px;
 }
 
 .pricing-table__body-item{
@@ -128,14 +131,19 @@ section{
     letter-spacing: -.003em;
 }
 
+.pricing-table__body-item-text a{
+    text-decoration: none;
+    color: inherit;
+    border-bottom: 1px solid var(--color-primary);
+}
 
-.pricing-table__include{
-    padding: 64px 40px;  
-    
+.pricing-table__include-content{
+     padding: 64px 40px;   
 }
 
 .pricing-table__include-list{
     padding: 0 16px 0 0;
+    height: auto;
     list-style-position: inside;
 }
 
@@ -167,12 +175,21 @@ section{
     border-radius: 50%;
 }
 
+.pricing-table__include-content{
+    margin-bottom: auto;
+}
+
 .pricing-table__container-btn{
-    /* outline: 	1px solid red; */
-    padding: 0 40px 56px
+    display: flex;
+    justify-content: center;
+    height: auto;
+    margin-top: auto;
+    width: calc(100% - 80px);
+    padding: 0px 40px 56px;
 }
 
 a.btn-pricing{
+    height: auto;
     text-decoration: none;
     color: var(---color-light);
     background-color: #26B16D;
@@ -180,5 +197,65 @@ a.btn-pricing{
     word-break: break-word;
     font-size: 18px;
     padding: 16px 20px;
+    
+}
+
+.pricing-table__foot{
+    text-align: center;
+}
+
+.pricing-table__foot h3{
+    font-size: 24px;
+    margin-bottom: 16px;
+    font-style: normal;
+    font-weight: 800;
+    line-height: 30px;
+}
+
+.pricing-table__foot P{
+    margin: 0 auto 32px;
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 28px;
+    letter-spacing: -.0045em;
+}
+
+
+@media only screen and (min-width:770px) {
+
+    .pricing-table__card{
+        max-width: 1010px;
+        margin: 0 auto 64px;
+        flex-direction: row;
+        border-radius: 30px;
+    }
+
+    .pricing-table__card > *{
+        flex: 1;
+        width: 50%;
+    }
+
+    .pricing-table__card h4{
+        font-size: 22px;
+        margin-bottom: 16px;
+        font-style: normal;
+        font-weight: 600;
+        line-height: 30px;
+        letter-spacing: -.792px;
+    }
+
+    .pricing-table__head{
+        border-radius: 30px 0 0 0;
+    }
+
+    .pricing-table__body{
+        padding: 0;
+        border-bottom: 0 ;
+    }
+
+    .pricing-table__body-content{
+        padding: 24px 40px 32px;
+        border-right: 1px solid #BDBDBD;
+    }
     
 }
